# python_workshop

./: README.md  main.py  presentasjon.pptx  pyproject.toml  ~$presentasjon.pptx
docs/: EXAMPLES.md
src/01_pythonic/: README.md  pythonic_thinking.md  pythonic_thinking.py  xample.py
src/a_basics/: __init__.py  a_variables.py  b_operators.py  c_strings.py  d_lists.py  e_tuples.py  f_sets.py  g_dictionaries.py  h_conditionals.py  j_loops.py  k_functions.py  l_modules.py  m_classes.py
src/b_func_exceptions/: func_exception.py  func_exceptions.md  xample.py
src/b_pythonic/: pythonic_thinking.md  pythonic_thinking.py  xample.py
src/c_func_exceptions/: func_exception.py  func_exeptions.md
src/d_modules_typing_tools/: module_typing_tools.py  modules_typing_tools.md  xample.py
src/e_tests/: solutions_complete.py  testing.md  testing_workshop.py  xample.py
src/f_async/: async_programming.md  async_workshop.py  xample.py
src/g_advanced/: __init__.py
src/g_advanced/a_project_structure/: project_structure_workshop.py  xample.py
src/g_advanced/b_design_patterns/: __init__.py  design_patterns_workshop.py
src/g_advanced/c_metaclasses/: __init__.py  metaclasses_workshop.py
src/g_advanced/d_concurrency/: __init__.py  concurrency_workshop.py
src/g_advanced/e_integration/: __init__.py  integration_workshop.py
src/g_advanced/f_performance/: __init__.py  performance_workshop.py
src/g_advanced/g_devops/: __init__.py  devops_workshop.py
src/g_project_structure/: project_structure.md  project_structure_workshop.py  xample.py
tests/: test_basics.py
(+4 files in other folders)
