[project]
name = "ptyhon_workshop"
version = "0.1.0"
description = "Python workshop for non-Python programmers"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "ruff>=0.12.8",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
strict_equality = true
