[project]
name = "python_workshop"
version = "0.1.0"
description = "Python workshop for non-Python programmers"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.15",
    "pandas>=2.3.1",
    "pytest>=8.4.1",
    "ruff>=0.12.8",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP", "B"]
ignore = ["I001", "F401"]
exclude = [
    "src/a_basics"
]


[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
strict_equality = true
